comedy genre added

--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-active": "off"
+      }
     ]
   }
 }
